Updated : index.html file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic Speech Recognition App</title>
 </head>
+<style>
+   
+</style>
 <body>
+    <h1>Basic Speech Recognition </h1>
+    <button id="startButton">Start Recognition</button>
+    <br>
+    <br>
+    <textarea name="text" id="output"  rows="10"></textarea>
+
+   
+   
+   
     <script src="script.js"></script>
 </body>
 </html>
