Updated : script.js file

--- a/index.html
+++ b/index.html
@@ -11,12 +11,7 @@
 <body>
     <h1>Basic Speech Recognition </h1>
     <button id="startButton">Start Recognition</button>
-    <br>
-    <br>
-    <textarea name="text" id="output"  rows="10"></textarea>
-
-   
-   
+    <p id="output"></p>
    
     <script src="script.js"></script>
 </body>
