--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic Speech Recognition App</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <style>
    
@@ -16,28 +17,38 @@
 
     <button class="btn btn-outline-success" type="button" id="signoutbutton">Sign Out</button>
    
+    <h2 id="msg"></h2>
+    <h2 id="greet"></h2>
     <script src="script.js"></script>
-
     <script>
-        let UserCreds = JSON.parse(sessionStorage.getItem("user-creds"));
-        let UserInfo = JSON.parse(sessionStorage.getItem("user-info "));
+        let UserCreds = JSON.parse(sessionStorage.getItem('user-cred'));
+        let UserInfo = JSON.parse(sessionStorage.getItem('user-info'));
+        
 
+        let MsgHead = document.getElementById('msg');
+        let GreetHead = document.getElementById('greet');
+        let SignOutBtn = document.getElementById('signoutbutton');
 
-        let SignoutBtn = document.getElementById('signoutbutton');
-        let Signout = () =>{
-            sessionStorage.removeItem("user-cred");
-            sessionStorage.removeItem("user-info");
-            window.location.href = 'login.html';
+     
+
+        let Signout= ()=>{
+            sessionStorage.removeItem('user-cred');
+            sessionStorage.removeItem('user-info');
+            window.location.href = 'login.html'
         }
 
         let CheckCred = ()=>{
-            if(!sessionStorage.getItem("user-cred")){
+            if(!sessionStorage.getItem('user-cred')){
                 window.location.href = 'login.html';
-        }
+            }
+            else{
+                MsgHead.innerText  = `User with email "${UserCreds.email}" logged in`;
+        GreetHead.innerText = `Welcome ${UserInfo.username}!`;
+            }
         }
 
-        window.addEventListener('load' , CheckCred);
-        SignoutBtn.addEventListener('click' , Signout);
-    </script>
+        window.addEventListener('load' ,CheckCred);
+        SignOutBtn.addEventListener('click' , Signout);
+        </script>
 </body>
 </html>
