--- a/index.html
+++ b/index.html
@@ -5,20 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic Speech Recognition App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/d616ce5e87.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <style>
    
 </style>
 <body>
-    <h1>Basic Speech Recognition </h1>
-    <button id="startButton">Start Recognition</button>
+    <div class="cont">
+    <div class="container">
+    <h1 id="heading1">Basic Speech Recognition </h1>
+    
+    <button id="startButton" class=" btn btn-primary">Start Recognition</button>
+    <i  class="fa-solid fa-microphone"></i>
     <p id="output"></p>
-
-
+    
     <button class="btn btn-outline-success" type="button" id="signoutbutton">Sign Out</button>
-   
-    <h2 id="msg"></h2>
-    <h2 id="greet"></h2>
+</div>
+</div>  
+<div class="headings">
+    <h5 id="msg"></h5>
+    <h5 id="greet"></h5>
+   </div>
     <script src="script.js"></script>
     <script>
         let UserCreds = JSON.parse(sessionStorage.getItem('user-cred'));
@@ -50,5 +58,9 @@
         window.addEventListener('load' ,CheckCred);
         SignOutBtn.addEventListener('click' , Signout);
         </script>
+
+        <footer>
+            <h2>Made By <u>Abhishek vashisth </u>🧑🏻‍💻</h2>
+        </footer>
 </body>
 </html>
