--- a/login.html
+++ b/login.html
@@ -122,7 +122,7 @@
                 password : snapshot.val().password
               }))
                 sessionStorage.setItem('user-cred' , JSON.stringify(credentials.user));
-                window.loaction.href = 'index.html';
+                window.location.href = 'index.html';
             }
           })
             console.log(credentials);
