--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
       <button type="submit">Sign Up</button>
 
-      <p>Already have an account? <a href="/login/login.html">Login here</a></p>
+      <p>Already have an account? <a href="login.html">Login here</a></p>
     </form>
 
     <script type="module">
