--- a/login.html
+++ b/login.html
@@ -72,7 +72,7 @@
     <input type="password" id="password" name="password" placeholder="Password" required>
 
     <button type="submit">Login</button>
-    <a href="/signup/register.html"><button type="button">Sign Up</button></a>
+    <a href="index.html"><button type="button">Sign Up</button></a>
   </form>
 
 
@@ -122,7 +122,7 @@
                 password : snapshot.val().password
               }))
                 sessionStorage.setItem('user-cred' , JSON.stringify(credentials.user));
-                window.location.href = '/src/index.html';
+                window.location.href = 'main.html';
             }
           })
             console.log(credentials);
