--- a/main.html
+++ b/main.html
@@ -42,12 +42,12 @@
         let Signout= ()=>{
             sessionStorage.removeItem('user-cred');
             sessionStorage.removeItem('user-info');
-            window.location.href = '/login/login.html'
+            window.location.href = 'login.html'
         }
 
         let CheckCred = ()=>{
             if(!sessionStorage.getItem('user-cred')){
-                window.location.href = '/login/login.html';
+                window.location.href = 'login.html';
             }
             else{
                 MsgHead.innerText  = `User with email "${UserCreds.email}" logged in`;
