--- a/main.html
+++ b/main.html
@@ -15,7 +15,10 @@
     <div class="cont">
     <div class="container">
     <h1 id="heading1">Basic Speech Recognition </h1>
-    
+    <script async src="https://cse.google.com/cse.js?cx=85c2644a632d94dde">
+    </script>
+    <div class="gcse-searchbox-only"></div>
+
     <button id="startButton" class=" btn btn-primary">Start Recognition</button>
     <i  class="fa-solid fa-microphone"></i>
     <p id="output"></p>
